force-app/main/default/objects/Engagement_Office_Split__c/Engagement_Office_Split__c.object-meta.xml
<CustomObject>
    <description>Stores the calculated office splits per Engagement</description>
    <label>Engagement Office Split</label>
    <nameField>
        <displayFormat>EOS-{00000000}</displayFormat>
        <label>Engagement Office Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Office Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>