force-app/main/default/objects/Engagement_Office_Split__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Related Engagement Record</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Engagement Office Splits</relationshipLabel>
    <relationshipName>Engagement_Office_Splits</relationshipName>
    <type>Lookup</type>
</CustomField>