force-app/main/default/objects/Engagement_Office_Split__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Office of the Split Calculation</description>
    <label>Office</label>
    <length>32</length>
    <type>Text</type>
</CustomField>