force-app/main/default/objects/Engagement_Office_Split__c/fields/Office_Split_Override_Percent__c.field-meta.xml
<CustomField>
    <fullName>Office_Split_Override_Percent__c</fullName>
    <description>Override Office Split Percentage Value</description>
    <inlineHelpText>If override value is no longer needed, be sure to clear the value and do not set to 0</inlineHelpText>
    <label>Office Split Override Percent</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>