force-app/main/default/objects/Engagement_Office_Split__c/fields/Office_Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Office_Split_Percent__c</fullName>
    <description>Formats to real percent number</description>
    <formula>BLANKVALUE(Office_Split_Override_Percent__c, Office_Split__c * 100.0)</formula>
    <label>Office Split Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>